--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+@font-face{
+	font-family: "Ropa Sans";
+  	src: url("https://fonts.google.com/specimen/Ropa+Sans");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: Ropa Sans, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+*{
+	box-sizing:border-box;
 }
 
 code {
