--- a/src/MobileCarousalComponent/mobileCarousalComponent.css
+++ b/src/MobileCarousalComponent/mobileCarousalComponent.css
@@ -1,9 +1,8 @@
-.image-container{
-	padding:5px;
+.mob-image-container{
 	position:relative;
 }
 
-.image-container > img{
+.mob-image-container > img{
 	width:100%;
 	display:block;
 }
@@ -23,15 +22,21 @@
 	top:50%;
 	transform: translateY(-50%);
 	padding:20px;
+	cursor:pointer;
+	background:grey;
+	opacity:0.8;
+	content:"";
 }
 
 .prev-mob-btn{
+	left:0%;
 	border-top-right-radius:10px;
 	border-bottom-right-radius:10px;
 }
 
 
 .next-mob-btn{
+	right:0%;
 	border-top-left-radius:10px;
 	border-bottom-left-radius:10px;
 }
